[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Spaceship_Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://kenney_spaceShooterExtension/PNG/Sprites X2/Station/spaceStation_018.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Timer.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 148.961
height = 487.975

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Spaceship_Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 489.103, 309.142 )

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 12.2704
margin_top = 7.55099
margin_right = 146.27
margin_bottom = 42.551
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boost" type="RichTextLabel" parent="."]
margin_left = 871.537
margin_top = 11.3308
margin_right = 1005.54
margin_bottom = 46.3308
text = "Energy:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Station" type="Node2D" parent="."]
position = Vector2( 57.9217, 539.749 )
scale = Vector2( 0.74, 0.74 )

[node name="Station_body" type="Sprite" parent="Station"]
position = Vector2( 1.37119, 0.349182 )
rotation = 0.507891
texture = ExtResource( 5 )

[node name="Station_Bound" type="Area2D" parent="Station/Station_body"]
position = Vector2( -2.40881, -1.02112 )
rotation = -0.338797
scale = Vector2( 0.74, 0.74 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Station/Station_body/Station_Bound"]
position = Vector2( -0.0545959, -1.59514 )
rotation = -1.14319
scale = Vector2( 0.74, 0.74 )
shape = SubResource( 1 )

[node name="EnemySpawn" type="Timer" parent="."]
wait_time = 3.0
autostart = true
script = ExtResource( 6 )

[node name="PauseButton" type="Button" parent="."]
pause_mode = 2
margin_left = 1.9371
margin_top = 689.103
margin_right = 141.937
margin_bottom = 717.103
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="Station/Station_body/Station_Bound" to="Spaceship_Player" method="_on_Station_Bound_area_entered"]
[connection signal="area_exited" from="Station/Station_body/Station_Bound" to="Spaceship_Player" method="_on_Station_Bound_area_exited"]
[connection signal="timeout" from="EnemySpawn" to="EnemySpawn" method="_on_EnemySpawn_timeout"]
[connection signal="timeout" from="EnemySpawn" to="." method="_on_EnemySpawn_timeout"]
[connection signal="pressed" from="PauseButton" to="." method="_on_Button_pressed"]
